--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "jquery-tag-editor",
-	"description": ""A powerful and lightweight tag editor plugin for jQuery.",
+	"description": "A powerful and lightweight tag editor plugin for jQuery.",
     "version": "1.0.8",
     "dependencies": {
         "jquery": ">=1.7"
