--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,7 @@
     }],
     "ignore": [
         "bower.json",
-        "demo.html"
+        "demo.html",
         "readme.md",
         "tag-editor.jquery.json"
     ]
