--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
 	"description": "A powerful and lightweight tag editor plugin for jQuery.",
     "version": "1.0.12",
     "dependencies": {
-        "jquery": ">=1.7"
+        "jquery": ">=1.7",
+        "caret": null,
     },
     "homepage": "https://github.com/Pixabay/jQuery-tagEditor",
     "authors": [{
