--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,7 @@
     "homepage": "https://github.com/Pixabay/jQuery-tagEditor",
     "authors": [{
         "name": "Simon Steinberger",
-        "url": "http://pixabay.com/users/Simon/",
+        "url": "https://pixabay.com/users/Simon/",
         "email": "simon@pixabay.com"
     }],
     "keywords": [
