Change name into bower.json file.

--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-    "name": "jquery-tag-editor",
+    "name": "jquery-tag-editor-mj",
 	"description": "A powerful and lightweight tag editor plugin for jQuery.",
     "version": "1.0.18",
     "dependencies": {
